aws/admin-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: admin-catalog
  namespace: codeflix
  labels:
    app: admin-catalog
  spec:
    selector:
      matchLabels:
        app: admin-catalog
    replicas: 2
    template:
      metadata:
        labels:
          app: admin-catalog
          filebeat_collector: true
      spec: 
        containers:
          - name: admin-catalog
            image: admin-catalog:latest
            volumeMounts:
              - name: gpc-credentials-volume
                mountPath: /app/gcp_credentials.json
                subPath: gcp_credentials.json
        volumes:
          - name: gpc-credentials-volume
            secret:
              secretName: gpc-credentials-secret
