aws/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: codeflix
spec:
  replicas: 1
  serviceName: mysql-h
  selector:
      matchLabels:
        app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        role: db
      containers:
        - name: mysql
          image: mysql
          port:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume

  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: gp3-storageclass
