aws/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
  namespace: codeflix
  spec:
    selector:
      app: nginx
    type: ClusterIP
    ports:
      - name: nginx-service
        port: 80
        targetPort: 80
        protocol: TCP
